Complete ddb transaction update lambda